--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
   "name": "timepack-util",
-  "version": "1.0.7",
-  "description": "a util page from timepack.cn",
-  "main": "index.js",
-  "scripts": {},
+  "version": "1.1.0",
+  "description": "A timepack.cn javascript util page to work with ES6 using Babel",
+  "main": "lib/index.js",
+  "scripts": {
+    "test": "node_modules/.bin/mocha -c -u bdd --require should ./test/test-babel --bail --harmony -t 5000",
+    "build": "./node_modules/.bin/babel ./src --out-dir ./lib",
+    "build-watch": "npm run eslint && ./node_modules/.bin/babel ./src --out-dir ./lib --watch",
+    "eslint": "./node_modules/.bin/eslint -f stylish ./src/*.js"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MillZhang/timepack-util.git"
+    "url": "https://github.com/MillZhang/timepack-util.git"
   },
   "keywords": [
-    "javascript", "util"
+    "es6",
+    "babel",
+    "workflow"
   ],
   "author": "millzhang",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/MillZhang/timepack-util/issues"
   },
-  "homepage": "https://github.com/MillZhang/timepack-util#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/MillZhang/timepack-util",
+  "devDependencies": {
+    "babel": "^5.5.4",
+    "babel-eslint": "^3.1.13",
+    "eslint": "^0.22.1",
+    "eslint-stylish": "^0.2.0",
+    "mocha": "^2.2.5",
+    "should": "^6.0.3"
+  },
+  "dependencies": {
+    "bluebird": "^2.9.27"
+  }
 }
