添加测试用例,重构babel编译,升级babel版本

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
-  "stage": 0,
-  "loose": ["all"],
-  "blacklist": ["regenerator"],
-  "optional": ["bluebirdCoroutines"],
-  "highlightCode":true
+    "presets": [
+        "es2015",
+    ],
+    "plugins": []
 }
