--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "timepack-util",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A timepack.cn javascript util page to work with ES6 using Babel",
   "main": "lib/index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha -c -u bdd --require should ./test/test-babel --bail --harmony -t 5000",
-    "build": "./node_modules/.bin/babel ./src --out-dir ./lib",
-    "build-watch": "npm run eslint && ./node_modules/.bin/babel ./src --out-dir ./lib --watch",
-    "eslint": "./node_modules/.bin/eslint -f stylish ./src/*.js"
+    "test": "mocha",
+    "build": "babel ./src -d ./lib"
   },
   "repository": {
     "type": "git",
@@ -25,14 +23,12 @@
   },
   "homepage": "https://github.com/MillZhang/timepack-util",
   "devDependencies": {
-    "babel": "^5.5.4",
-    "babel-eslint": "^3.1.13",
-    "eslint": "^0.22.1",
-    "eslint-stylish": "^0.2.0",
-    "mocha": "^2.2.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "expect": "^21.2.1",
+    "mocha": "^2.5.3",
     "should": "^6.0.3"
-  },
-  "dependencies": {
-    "bluebird": "^2.9.27"
   }
 }
